depends_core/src/macros/snapshots/depends_core__macros__leaf__tests__leaf.snap
---
source: depends_core/src/macros/leaf.rs
assertion_line: 122
expression: format_source(derive_leaf(input).to_string().as_str())
---
impl ::depends::core::Named for Foo {
    fn name() -> &'static str {
        "Foo"
    }
}
impl Foo {
    pub fn into_leaf(self) -> ::std::rc::Rc<::depends::core::LeafNode<Self>> {
        ::depends::core::LeafNode::new(self)
    }
}
impl ::depends::core::Clean for Foo {
    fn clean(&mut self) {}
}

