depends_core/src/macros/snapshots/depends_core__macros__leaf__tests__leaf_generics_custom_clean.snap
---
source: depends_core/src/macros/leaf.rs
assertion_line: 145
expression: format_source(derive_leaf(input).to_string().as_str())
---
impl<T> ::depends::core::Named for Foo<T> {
    fn name() -> &'static str {
        "Foo"
    }
}
impl<T> Foo<T> {
    pub fn into_leaf(self) -> ::depends::core::LeafNodeRc<Self> {
        ::depends::core::LeafNode::new(self)
    }
}

